use toList() instead of Collectors